--- a/src/main/vfs/sites/default/express-news/.content/.config
+++ b/src/main/vfs/sites/default/express-news/.content/.config
@@ -4,33 +4,22 @@
   <SitemapConfiguration language="en">
     <CreateContentsLocally>true</CreateContentsLocally>
     <PreferDetailPagesForLocalContents>true</PreferDetailPagesForLocalContents>
-    <DiscardModelPages>false</DiscardModelPages>
     <ModelPage>
       <Page>
         <link type="WEAK">
-          <target><![CDATA[/sites/default/.content/.templates/express-news-template.html]]></target>
-          <uuid>35a78a44-3307-11e8-94f3-e5c82a707ed0</uuid>
+          <target><![CDATA[/sites/default/express-news/.content/.templates/express-news-template.html]]></target>
+          <uuid>b2015d32-47b0-11e8-a806-e5c82a707ed0</uuid>
         </link>
       </Page>
       <Disabled>false</Disabled>
       <IsDefault>true</IsDefault>
     </ModelPage>
-    <ModelPage>
-      <Page>
-        <link type="WEAK">
-          <target><![CDATA[/sites/default/.content/.templates/express-news-search.html]]></target>
-          <uuid>523fbec2-43b9-11e8-ad03-e5c82a707ed0</uuid>
-        </link>
-      </Page>
-      <Disabled>false</Disabled>
-      <IsDefault>false</IsDefault>
-    </ModelPage>
     <DetailPage>
       <Type><![CDATA[express-news-article]]></Type>
       <Page>
         <link type="WEAK">
-          <target><![CDATA[/sites/default/express-news/news/news/]]></target>
-          <uuid>850f3af9-332e-11e8-baa1-e5c82a707ed0</uuid>
+          <target><![CDATA[/sites/default/express-news/news/]]></target>
+          <uuid>9f3ca2fa-47af-11e8-a806-e5c82a707ed0</uuid>
         </link>
       </Page>
     </DetailPage>
